# agile_kanban_card_game

./: Cargo.toml  README.md  compose.yaml
anathema_frontend/: Cargo.toml  Dockerfile
anathema_frontend/src/: api.rs  lib.rs  main.rs
anathema_frontend/src/components/: button.rs  input.rs
anathema_frontend/src/pages/: home.rs  lobby.rs  mod.rs  splash.rs
anathema_frontend/templates/: button.aml  home.aml  input.aml  lobby.aml  splash.aml
backend/: Cargo.toml  Dockerfile
backend/db_init/: init.sql
backend/src/: lib.rs  main.rs
backend/src/db/: game_queries.rs  mod.rs
backend/src/routes/: create_game.rs  healthcheck.rs  mod.rs
src/: api.rs  lib.rs
src/components/: button.rs  error.rs  game_code.rs  input.rs  message.rs  mod.rs  nav.rs
src/pages/: config.rs  home.rs  mod.rs  splash.rs
templates/: button.aml  config.aml  error.aml  game_code.aml  home.aml  input.aml  lobby.aml  message.aml  nav.aml  splash.aml
