[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
rand = "0.9.2"
